--- a/js/lib/package.json
+++ b/js/lib/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.3"
   },
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "require": "^2.4.20"
   }
 }
