--- a/js/lib/package.json
+++ b/js/lib/package.json
@@ -13,6 +13,16 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "require": "^2.4.20"
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^2.0.6",
+    "gulp-uglify": "^1.5.1",
+    "jshint": "^2.9.1",
+    "require": "^2.4.20",
+    "tmodjs": "^1.0.3"
   }
 }
