--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "gulp-minify-css": "^1.2.3",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.0.6",
+    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "jshint": "^2.9.1",
+    "less": "^2.6.0",
     "require": "^2.4.20",
     "tmodjs": "^1.0.3"
   }
